# sql-parser-simplified

./: .gitignore  Cargo.toml  README.md
src/lib/: mod.rs  tokenizer.rs  tokens.rs
src/lib/ast/: mod.rs  query.rs  set_expr.rs  statements.rs
src/lib/ast/expression/: expr.rs  ident.rs  mod.rs  value.rs
src/lib/dialect/: base.rs  generic_dialect.rs  mod.rs
src/lib/lexing/: mod.rs  tokenizer.rs  tokens.rs
src/lib/parsing/: expressions.rs  mod.rs  parser.rs
tests/: test_parsing_tpch_queries.rs  test_sql_insert.rs  test_sql_select.rs  test_sql_update.rs
tests/tpch/: 1.sql  2.sql
