[package]
name = "sqlparsing"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
include = [
    "src/**/*.rs",
    "Cargo.toml",
    "LICENSE.TXT",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "sqlparsing"
path = "src/main.rs"

[dependencies]
